fixed coures text align

--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ aside {
     margin: 0;
     padding: 0;
     list-style: none;
-    text-align: center;
+    
 }
 
 .courses h3 {
